<resources>
    <string name="app_name">NoorTasksManger</string>
    <string name="title_activity_tasks_list">TasksListActivity</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Signup">Sign up</string>
    <string name="Login">Log in</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="RePassword">Re Password</string>
    <string name="rePassword">rePassword</string>
    <string name="SignUp">Sign up</string>
    <string name="Text">Text</string>
    <string name="FastAdd">Fast Add</string>
    <string name="AddFast">+</string>
    <string name="TaskText">Task Text</string>
    <string name="Phone">Phone</string>
    <string name="Contacte">CONTACTS</string>
    <string name="Location">Location</string>
    <string name="Save">Save</string>
    <string name="ForgetMyPassword">Forget My Password</string>
    <string name="logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="phone1">Phone</string>
    <string name="location1">Location</string>
</resources>
