<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/tvName"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPhone"
            android:layout_weight="1"
            android:text="@string/phone1" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:id="@+id/btnPhone"
            android:layout_weight="0.19"
            android:src="@android:drawable/stat_sys_phone_call" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etLocation"
            android:layout_weight="1"
            android:text="@string/location1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLocation"
            android:src="@android:drawable/ic_menu_mylocation" />
    </LinearLayout>

    <RatingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rtBarPriority"
        android:layout_gravity="center_horizontal" />

</LinearLayout>